# Mucko

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/commands/: user.rs
