[package]
name = "mucko-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.26"
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
#features = ["cache", "framework", "standard_framework", "rustls_backend"]